# libconstellation

./: .gitignore  CMakeLists.txt  Cargo.toml  constellationConfig.cmake.in  pppm.toml  recipe.proto.sh
include/Quasar/: NetworkAPI  Quasar  Telemetry  TelemetrySocket  Utils
include/Quasar/Data/: Status  Telemetry
include/constellation/: global.h
include/constellation/config/: config.h
include/constellation/ip/: ipv4.h
include/constellation/network/: api.h
include/constellation/network/modules/: powerswitch.h
resources/: quasar-config.json  quasar_rc.qrc
scripts/: powerswitch.py
src/c++/: networkapi.c++  networkapi.h  quasar.c++  quasar.h  register.c++  register.h  utils.c++  utils.h
src/c++/config/: config.c++
src/c++/datagrams/: status.h  telemetry.h
src/c++/ip/: ipv4.c++  localaddr.c++  netif.h
src/c++/network/: api.c++
src/c++/network/modules/: powerswitch.c++
src/c++/sockets/: telemetrysocket.c++  telemetrysocket.h
src/c++/types/: telemetry.c++  telemetry.h
